[project]
name = "hello-tusd"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "grpclib[protobuf]>=0.4.7",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.66.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hello_tusd"]

[project.scripts]
hello-tusd = "hello_tusd.server:main"
